--- a/OnlineShopping_MongodbService/index.html
+++ b/OnlineShopping_MongodbService/index.html
@@ -2,7 +2,8 @@
   
   </head>
   <body>
-    <form action="/uploadFileToStorage" method="post" enctype="multipart/form-data">
+    <h1>Service is started</h1>
+    <form style="display:none" action="/uploadFileToStorage" method="post" enctype="multipart/form-data">
       <label for="uploadfile">File</label>
       <input id="uploadfile" name="uploadfile" type="file" />
       <button>Upload</button>
